modules/gdscript/tests/scripts/parser/errors/variadic_func_params_after_rest.gd
func f(...args, extra_arg):
	pass

func test():
	pass
